force-app/main/default/objects/Break_Request__c/Break_Request__c.object-meta.xml
<CustomObject>
    <label>Break Request</label>
    <nameField>
        <displayFormat>BR-{000000}</displayFormat>
        <label>Break Request</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Read</sharingModel>
</CustomObject>