force-app/main/default/objects/Break_Request__c/fields/Break_Type__c.field-meta.xml
<CustomField>
    <fullName>Break_Type__c</fullName>
    <description>Type of break: Morning Break (10min), Lunch (60min), Afternoon Break (10min)</description>
    <label>Break Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Morning Break</fullName>
            </value>
            <value>
                <fullName>Lunch</fullName>
            </value>
            <value>
                <fullName>Afternoon Break</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>