force-app/main/default/objects/Break_Request__c/fields/CalendarEventId__c.field-meta.xml
<CustomField>
    <fullName>CalendarEventId__c</fullName>
    <description>Salesforce Event ID linked to this break request for calendar integration</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Calendar Event ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>