force-app/main/default/objects/Break_Request__c/fields/Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes__c</fullName>
    <description>Duration of break in minutes (calculated from Start_Time__c and End_Time__c)</description>
    <label>Duration (Minutes)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>