force-app/main/default/objects/Break_Request__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>End time of the break</description>
    <label>End Time</label>
    <type>Time</type>
</CustomField>