force-app/main/default/objects/Break_Request__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Reason for the break (optional)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>