force-app/main/default/objects/Break_Request__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who requested this break</description>
    <label>Requester</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Break Requests</relationshipLabel>
    <relationshipName>Break_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>