force-app/main/default/objects/Break_Request__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Start time of the break</description>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>